--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "tevs.gui"]
 	path = tevs.gui
-	url = git@github.com:FreeAndFair/tevs.gui.git
+	url = https://github.com/FreeAndFair/tevs.gui.git
 [submodule "tevs"]
 	path = tevs
-	url = git@github.com:FreeAndFair/tevs.git
+	url = https://github.com/FreeAndFair/tevs.git
